myteo/test/parser/ast/type/malformed_error.myte
val x: 1 = 1;